instructions/src/instructions/snapshots/osrm_extensions_instructions__instructions__banner_instruction__tests__banner_arrival.snap
---
source: instructions/src/instructions/banner_instruction.rs
expression: factory.build()
---
[
  {
    "distanceAlongGeometry": 0.0,
    "primary": {
      "text": "arrive",
      "type": "arrive",
      "components": [
        {
          "text": "arrive",
          "type": "text"
        }
      ]
    }
  }
]
