instructions/src/instructions/snapshots/osrm_extensions_instructions__instructions__banner_instruction__tests__banner_with_next_step.snap
---
source: instructions/src/instructions/banner_instruction.rs
expression: factory.build()
---
[
  {
    "distanceAlongGeometry": 50.0,
    "primary": {
      "text": "Main Street",
      "type": "turn",
      "modifier": "right",
      "components": [
        {
          "text": "Main Street",
          "type": "text"
        }
      ]
    }
  }
]
